--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,4 +14,5 @@ jobs:
           user: josesreyes
           template: classic
           base: header, activity, community, repositories, metadata
+          plugin_languages: yes
           config_timezone: America/Mexico_City
