--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,7 @@
 name: Metrics
 on:
   schedule: 
-    - cron: "0 0 * * *"   # Se ejecuta cada día a medianoche UTC
+    - cron: "0 0 * * *"   # Corre cada día a medianoche UTC
   workflow_dispatch:      # Permite correrlo manualmente
 
 jobs:
@@ -14,5 +14,7 @@ jobs:
           user: josesreyes
           template: classic
           base: header, activity, community, repositories, metadata
-          plugin_languages: yes
           config_timezone: America/Mexico_City
+          plugin_languages: yes
+          plugin_isocalendar: yes
+          plugin_stars: yes
