--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,8 +1,8 @@
 name: Metrics
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Corre cada 12 horas
-  workflow_dispatch:
+    - cron: "0 */12 * * *"   # Corre cada 12 horas
+  workflow_dispatch:          # Permite correrlo manualmente
 
 jobs:
   github-metrics:
@@ -10,10 +10,11 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}   # Usa el token automático de GitHub
           user: josesreyes
-          template: terminal
+          template: terminal                   # Estilo consola retro
           base: header, repositories
           config_timezone: America/Mexico_City
           plugin_languages: yes
-          plugin_languages_limit: 6
+          plugin_languages_limit: 10
+
