--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,6 +22,8 @@ jobs:
 
           # 🔹 Solo lenguajes
           plugin_languages: yes
+          plugin_languages_ignored: html, css
+          plugin_languages_priority: java, kotlin, c#, swift, rust, cobol, go, python, typescript, javascript
           plugin_languages_sections: most-used
           plugin_languages_details: percentage
           plugin_languages_limit: 6
